src/report/human/snapshots/voom__report__human__tests__default_hides_skip_detail.snap
---
source: src/report/human/mod.rs
expression: "render_to_string(&skipped(), HumanOptions::default())"
---
/projects
  removed  100 B  rust  api/target

1 artifact, 100 B reclaimed in 1.23s
  2 candidates skipped  --verbose for why
