src/report/human/snapshots/voom__report__human__tests__should_render_a_clean_tree_without_a_leading_blank_line.snap
---
source: src/report/human/mod.rs
expression: "render_to_string(&result(Vec::new(), false), HumanOptions::default())"
---
0 artifacts, 0 B reclaimed in 1.23s
  scan 900.00ms · policy 12.00ms · size 210.00ms · delete 98.00ms
