src/report/human/snapshots/voom__report__human__tests__should_render_a_dry_run_as_reclaimable_and_say_nothing_was_removed.snap
---
source: src/report/human.rs
expression: "render_to_string(&result, HumanOptions::default())"
---
/projects
  would remove  4.20 GB  rust  api/target

1 artifact, 4.20 GB reclaimable in 1.23s
Dry run — nothing was removed.
