src/report/human/snapshots/voom__report__human__tests__should_render_a_run_with_every_outcome.snap
---
source: src/report/human/mod.rs
expression: "render_to_string(&mixed(), HumanOptions::default())"
---
/projects
  removed   4.20 GB  rust  api/target
  partial    130 GB  rust  busy/target    — 500 MB left; a directory was not empty when voom unlinked it, most likely because something wrote into it during the removal; re-run to finish
  refused       0 B  rust  link/target    — is a symlink
  failed        0 B  rust  locked/target  — permission denied unlinking something inside it
  removed  18.50 MB  node  web/dist

2 artifacts, 134.22 GB reclaimed in 1.23s
  rust 134.20 GB (1), node 18.50 MB (1)
  1 artifact refused by a safety rail
  1 artifact partly removed: 130 GB freed and counted above, 500 MB left
  1 artifact could not be removed
