src/report/human/snapshots/voom__report__human__tests__should_render_only_the_footer_when_asked_for_a_summary.snap
---
source: src/report/human.rs
expression: "render_to_string(&mixed(), options)"
---
2 artifacts, 4.22 GB reclaimed in 1.23s
  rust 4.20 GB (1), node 18.50 MB (1)
  1 artifact refused by a safety rail
  1 artifact could not be removed
