src/report/human/snapshots/voom__report__human__tests__verbose_explains_every_skip.snap
---
source: src/report/human/mod.rs
expression: "render_to_string(&skipped(), verbose())"
---
/projects
  removed  100 B  rust  api/target

  skipped  data/target  — no rust marker (Cargo.toml) proves it
  skipped  tool/bin     — not enabled — `bin/` beside a go.mod is as often hand-written scripts as output. Enable with `go.bin`

1 artifact, 100 B reclaimed in 1.23s
  2 candidates skipped
